# gdal

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod  proj.BUILD.bazel  requirements.txt
alg/: BUILD.bazel
alg/internal_libqhull/: BUILD.bazel
alg/marching_squares/: BUILD.bazel
apps/: BUILD.bazel  app_wrapper.go  gdal_app.bzl  gdal_app.cpp  gdal_app_lib.cpp
apps/argparse/: BUILD.bazel
cmake/template/: BUILD.bazel
frmts/: BUILD.bazel
frmts/derived/: BUILD.bazel
frmts/gtiff/: BUILD.bazel
frmts/gtiff/libgeotiff/: BUILD.bazel
frmts/gtiff/libtiff/: BUILD.bazel
frmts/hfa/: BUILD.bazel
frmts/mem/: BUILD.bazel
frmts/vrt/: BUILD.bazel
frmts/zlib/: BUILD.bazel
frmts/zlib/contrib/infback9/: BUILD.bazel
gcore/: BUILD.bazel
gcore/mdreader/: BUILD.bazel
gnm/: BUILD.bazel
gnm/gnm_frmts/: BUILD.bazel
ogr/: BUILD.bazel
ogr/ogrsf_frmts/: BUILD.bazel
ogr/ogrsf_frmts/csv/: BUILD.bazel
ogr/ogrsf_frmts/generic/: BUILD.bazel
ogr/ogrsf_frmts/geojson/: BUILD.bazel
ogr/ogrsf_frmts/geojson/libjson/: BUILD.bazel
ogr/ogrsf_frmts/kml/: BUILD.bazel
ogr/ogrsf_frmts/mem/: BUILD.bazel
ogr/ogrsf_frmts/mitab/: BUILD.bazel
ogr/ogrsf_frmts/shape/: BUILD.bazel
ogr/ogrsf_frmts/vrt/: BUILD.bazel
port/: BUILD.bazel
swig/: BUILD.bazel  swig.bzl
swig/include/: BUILD.bazel  gdal.i  ogr.i
swig/include/python/: BUILD.bazel  python_exceptions.i
swig/python/: BUILD.bazel  CMakeLists.txt  pyproject.toml
swig/python/gdal-utils/osgeo_utils/: BUILD.bazel
swig/python/gdal-utils/osgeo_utils/auxiliary/: BUILD.bazel
swig/python/osgeo/: BUILD.bazel
