module(
    name = "gdal",
    version = "0.0.1",
    repo_name = "com_github_osgeo_gdal",
)

bazel_dep(name = "buildozer", version = "7.1.2")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
bazel_dep(name = "zlib", version = "1.3.1.bcr.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "curl", version = "8.8.0")
bazel_dep(name = "sqlite3", version = "3.42.0.bcr.1")
bazel_dep(name = "proj", version = "0.0.1")
git_override(
    module_name = "proj",
    commit = "e0c35b8afc143e9ae785b75f02ec826f0cfb0f6e",
    remote = "https://github.com/mboulton-fathom/PROJ.git",
)

#local_path_override(
#    module_name = "proj",
#    path = "../PROJ",
#)

bazel_dep(name = "libdeflate", version = "1.20.bcr.1")
archive_override(
    module_name = "libdeflate",
    integrity = "sha256-7RRUFmzteJE/84CYcKQAW3Fwpv0wdn3EeKCbloR7nCo=",
    patches = [
        "//third_party/deflate:module_dot_bazel.patch",
        "//third_party/deflate:add_build_file.patch",
    ],
    strip_prefix = "libdeflate-1.20",
    urls = ["https://github.com/ebiggers/libdeflate/archive/refs/tags/v1.20.tar.gz"],
)

## TODO python
# bazel_dep(name = "rules_python", version = "0.33.2")
# bazel_dep(name = "rules_python_gazelle_plugin", version = "0.33.2")
# bazel_dep(name = "aspect_rules_py", version = "0.7.3")
#
# python = use_extension("@rules_python//python/extensions:python.bzl", "python")
# python.toolchain(
#     configure_coverage_tool = True,
#     is_default = True,
#     python_version = "3.11",
# )

# pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
# pip.parse(
#     hub_name = "pip",
#     python_version = "3.11",
#     requirements_lock = "//python:requirements.txt",
# )
# use_repo(pip, "pip")
