module(
    name = "gdal",
    version = "0.0.1",
)

bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "buildozer", version = "7.1.2")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
bazel_dep(name = "zlib", version = "1.3.1.bcr.1")
bazel_dep(name = "rules_cc", version = "0.0.12")
bazel_dep(name = "curl", version = "8.8.0")
bazel_dep(name = "sqlite3", version = "3.42.0.bcr.1")
bazel_dep(name = "proj", version = "9.4.1.gdalregistry.3")
git_override(
    module_name = "proj",
    commit = "e0c35b8afc143e9ae785b75f02ec826f0cfb0f6e",
    remote = "https://github.com/mboulton-fathom/PROJ.git",
)
#local_path_override(
#    module_name = "proj",
#    path = "../PROJ",
#)

#git_override(
#    module_name = "proj",
#    commit = "780470bd91d907771ef5d588512eeac265f9ef75",
#    remote = "https://github.com/mboulton-fathom/PROJ.git",
#)

bazel_dep(name = "libdeflate_with_gzip", version = "1.21.gdalregistry.1")

## TODO python
# bazel_dep(name = "rules_python", version = "0.33.2")
# bazel_dep(name = "rules_python_gazelle_plugin", version = "0.33.2")
# bazel_dep(name = "aspect_rules_py", version = "0.7.3")
#
# python = use_extension("@rules_python//python/extensions:python.bzl", "python")
# python.toolchain(
#     configure_coverage_tool = True,
#     is_default = True,
#     python_version = "3.11",
# )

# pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
# pip.parse(
#     hub_name = "pip",
#     python_version = "3.11",
#     requirements_lock = "//python:requirements.txt",
# )
# use_repo(pip, "pip")

# For C++ dev
# Run every so often:
#  bazel run @hedron_compile_commands//:refresh_all
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
