module(
    name = "gdal",
    version = "3.9.1",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.47.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")
bazel_dep(name = "rules_cc", version = "0.0.12")
bazel_dep(name = "curl", version = "8.8.0")
bazel_dep(name = "sqlite3", version = "3.42.0.bcr.1")
bazel_dep(name = "proj", version = "9.4.1.gdalregistry.3")
git_override(
    module_name = "proj",
    commit = "e0c35b8afc143e9ae785b75f02ec826f0cfb0f6e",
    remote = "https://github.com/mboulton-fathom/PROJ.git",
)

bazel_dep(name = "rules_python", version = "0.36.0")
bazel_dep(name = "libdeflate_with_gzip", version = "1.21.gdalregistry.1")
bazel_dep(name = "swig", version = "4.2.0")

###########################
# Python
python_version = "3.11"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = python_version,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "gdal_python_deps",
    python_version = python_version,
    requirements_lock = "//:requirements.txt",
)
use_repo(
    pip,
    "gdal_python_deps",
)

# For C++ dev
# Run every so often:
#  bazel run @hedron_compile_commands//:refresh_all
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.1",
    dev_dependency = True,
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
    dev_dependency = True,
)
