package(
    default_visibility = ["//visibility:public"],
)

load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

cmake(
    name = "proj",
    build_args = [
        "-j",
        "2",
    ],
    out_data_dirs = ["share"],
    out_lib_dir = "lib64",
    generate_args = ["-GNinja"],
    cache_entries = {
        "CMAKE_C_FLAGS": "-fPIC",
        "CMAKE_CXX_FLAGS": "-fPIC",
        "BUILD_TESTING": "OFF",
        "BUILD_SHARED_LIBS": "OFF",
    },
    lib_source = ":all_srcs",
    out_static_libs = ["libproj.a"],
)
