package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
    ]),
)

filegroup(
    name = "alg",
    srcs = glob(
        [
            "*.cpp",
            "*.c",
        ],
        allow_empty = False,
        exclude = [
            "polygonize_polygonizer.cpp",
            #            "polygonize_polygonizer_impl.cpp",
        ],
    ),
)

exports_files(["polygonize_polygonizer.cpp"])
