package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//apps:gdal_app.bzl", "gdal_app")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "apps",
    srcs = glob([
        "*_lib.cpp",
    ]) + [
        "commonutils.cpp",
        "gdalargumentparser.cpp",
        "nearblack_lib_floodfill.cpp",
    ],
    hdrs = [
        "//apps:headers",
        "//apps/argparse:headers",
    ],
    defines = ["GDAL_COMPILATION"],
    deps = [
        "//:gdal_core",
    ],
)

gdal_app(
    name = "gdalinfo",
    srcs = [
        ":gdalinfo_bin.cpp",
    ],
)

gdal_app(
    name = "gdallocationinfo",
    srcs = [
        ":gdallocationinfo.cpp",
    ],
)

gdal_app(
    name = "gdalwarp",
    srcs = [
        ":gdalwarp_bin.cpp",
    ],
)

gdal_app(
    name = "gdal_translate",
    srcs = [
        ":gdal_translate_bin.cpp",
    ],
)
