load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//apps:gdal_app.bzl", "gdal_app")

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "apps",
    srcs = glob(
        [
            "*_lib.cpp",
        ],
        exclude = [
            "gdal_app.cpp",
            "gdal_app_lib.cpp",
        ],
    ) + [
        "commonutils.cpp",
        "gdalargumentparser.cpp",
        "nearblack_lib_floodfill.cpp",
    ],
    hdrs = [
        "//apps:headers",
        "//apps/argparse:headers",
    ],
    defines = ["GDAL_COMPILATION"],
    deps = [
        "//:gdal_core",
    ],
)

gdal_app(
    name = "gdalinfo",
    srcs = [
        ":gdalinfo_bin.cpp",
    ],
)

gdal_app(
    name = "gdallocationinfo",
    srcs = [
        ":gdallocationinfo.cpp",
    ],
)

gdal_app(
    name = "gdalwarp",
    srcs = [
        ":gdalwarp_bin.cpp",
    ],
)

gdal_app(
    name = "gdal_translate",
    srcs = [
        ":gdal_translate_bin.cpp",
    ],
)

gdal_app(
    name = "ogr2ogr",
    srcs = [
        ":ogr2ogr_bin.cpp",
    ],
)

alias(
    name = "gdal_calc.py",
    actual = "//swig/python/gdal-utils/osgeo_utils:gdal_calc",
    visibility = ["//visibility:public"],
)
