load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:__subpackages__"])

genrule(
    name = "gdal_version_header",
    srcs = ["gdal_version.h.in"],
    outs = ["gdal_version.h"],
    cmd = """cat $< > $@""",
)

genrule(
    name = "gdal_version_subfolder_header",
    srcs = ["gdal_version.h.in"],
    outs = ["gdal_version_full/gdal_version.h"],
    cmd = """cat $< > $@""",
)

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]) + [
        "gdal_version_header",
        "gdal_version_subfolder_header",
    ],
)

filegroup(
    name = "gcore",
    srcs = glob([
        "*.c",
        "*.cpp",
    ]),
)

filegroup(
    name = "data",
    srcs = glob(["data/*.json"]),
)
