package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "gnm",
    srcs = glob([
        "*.c",
        "*.cpp",
    ]),
    hdrs = [
        ":headers",
        "//gcore:headers",
        "//ogr:headers",
        "//ogr/ogrsf_frmts:headers",
    ],
    copts = [
        "-Iogr",
        "-Igcore",
        "-Iogr/ogrsf_frmts",
        "-I$(GENDIR)/gcore",
        "-Iport",
        "-I$(GENDIR)/port",
    ],
    defines = ["GDAL_COMPILATION"],
    deps = [
        "//gcore",
        "//port",
    ],
)
