package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "ogr",
    srcs = glob([
        "*.c",
        "*.cpp",
    ]),
    hdrs = [
        ":headers",
        "//gcore:headers",
        "//ogr/ogrsf_frmts:headers",
        "//ogr/ogrsf_frmts/mem:headers",
        "//port:headers",
    ],
    copts = [
        "-Igcore",
        "-Iogr",
        "-Iport",
        "-I$(GENDIR)/port",
        "-I$(GENDIR)/gcore",
        "-Iogr/ogrsf_frmts",
        "-Iogr/ogrsf_frmts/mem",
    ],
    defines = ["GDAL_COMPILATION"],
    includes = [
        "../gcore",
    ],
    deps = ["@proj"],
)
