package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "ogr",
    srcs = glob(
        [
            "*.c",
            "*.cpp",
        ],
        exclude = [
            "ogr_capi_test.c",
            "test_geo_utils.cpp",
        ],
    ),
    hdrs = [
        ":headers",
        "//gcore:headers",
        "//ogr/ogrsf_frmts:headers",
        "//ogr/ogrsf_frmts/geojson:headers",
        "//ogr/ogrsf_frmts/geojson/libjson:headers",
        "//ogr/ogrsf_frmts/mem:headers",
        "//port:headers",
    ],
    copts = [
        "-Igcore",
        "-Iogr",
        "-Iport",
        "-I$(GENDIR)/port",
        "-I$(GENDIR)/gcore",
        "-Iogr/ogrsf_frmts",
        "-Iogr/ogrsf_frmts/mem",
        "-Iogr/ogrsf_frmts/geojson",
        "-Iogr/ogrsf_frmts/geojson/libjson",
    ],
    defines = ["GDAL_COMPILATION"],
    deps = [
        "//port",
        "@proj",
    ],
)
