load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

filegroup(
    name = "ogr",
    srcs = glob(
        [
            "*.c",
            "*.cpp",
        ],
        exclude = [
            "ogr_capi_test.c",
            "test_geo_utils.cpp",
            "generate_encoding_table.c",
        ],
    ),
)
