package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template_rule")

expand_template_rule(
    # A unique name for this target.
    name = "cpl_config_generate",
    # The template file to expand.
    out = "cpl_config.h",
    substitutions = {
        "cmakedefine": "define",
        "@GDAL_PREFIX@": "/usr/local",
        "@SIZEOF_INT@": "4",  # gdal is hardcoded to accept this value 🤷
        "@SIZEOF_UNSIGNED_LONG@": "8",
        "@SIZEOF_VOIDP@": "8",
        "@SIZEOF_SIZE_T@": "8",
        "@SIZEOF_LONG_INT@": "8",
        "@VSI_STAT64_T@": "stat",
        "@ICONV_CPP_CONST@": "const",
        "@VSI_FOPEN64@": "fopen",
        "@VSI_FTRUNCATE64@": "ftruncate",
        "@VSI_FSEEK64@": "fseek",
        "@VSI_FTELL64@": "ftell",
        "@CPL_CONFIG_EXTRAS@": "",
        "HAVE_DIRECT_H 1": "_HAVE_DIRECT_H 0",
        "HAVE_XLOCALE_H 1": "_HAVE_XLOCALE_H 0",
    },
    template = "//cmake/template:cpl_config_template",
)

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]) + [
        ":cpl_config.h",
    ],
)

cc_library(
    name = "port",
    srcs = glob(
        ["*.cpp"],
        exclude = ["*win32.cpp"],
    ),
    hdrs = [
        ":headers",
    ],
    copts = [
        "-Ifrmts/zlib",
        "-Iogr",
        "-I$(GENDIR)/port",
    ],
    defines = [
        "GDAL_COMPILATION=1",
    ],
    includes = [
        "$(GENDIR)/port",
    ],
    local_defines = [
        "CPL_MSB=1",
    ],
    deps = [
        "//frmts/zlib",
        "//ogr",
    ],
)
