package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "gtiff",
    srcs = glob(
        [
            "*.c",
            "*.cpp",
        ],
        exclude = [
            "*jxl*",
            "*quant*",
        ],
    ) + [
        "//port:cpl_md5.cpp",
    ],
    hdrs = [
        ":headers",
        "//alg:headers",
        "//apps:headers",
        "//gcore:headers",
        "//ogr:headers",
        "//ogr/ogrsf_frmts:headers",
        "//port:headers",
    ],
    copts = [
        "-Iogr",
        "-Ialg",
        "-Iapps",
        "-Iogr/ogrsf_frmts",
        "-Iport",
        "-I$(GENDIR)/port",
        "-Igcore",
        "-I$(GENDIR)/gcore",
        "-Ifrmts/gtiff/libtiff",
        "-Ifrmts/gtiff/libgeotiff",
    ],
    defines = ["GDAL_COMPILATION"],
    deps = [
        "//frmts/gtiff/libgeotiff",
        "//frmts/gtiff/libtiff",
    ],
)
