load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

filegroup(
    name = "gtiff",
    srcs = glob(
        [
            "*.c",
            "*.cpp",
        ],
        exclude = [
            "*jxl*",
            "*quant*",
        ],
    ) + [
        ":headers",
        #        "//port:cpl_md5.cpp",
    ],
)
