package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob(["*.h"]),
)

cc_library(
    name = "mem",
    srcs = glob(
        [
            "*.cpp",
        ],
        allow_empty = False,
    ),
    hdrs = [
        ":headers",
        "//gcore:headers",
        "//ogr:headers",
        "//port:headers",
    ],
    copts = [
        "-Iogr",
        "-Iport",
        "-I$(GENDIR)/port",
        "-Igcore",
        "-I$(GENDIR)/gcore",
    ],
    defines = ["GDAL_COMPILATION"],
)
