package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "gnm_fmts",
    srcs = glob([
        "*.c",
        "*.cpp",
    ]),
    hdrs = [
        ":headers",
        "//gcore:headers",
        "//ogr:headers",
        "//ogr/ogrsf_frmts:headers",
        "//port:headers",
    ],
    copts = [
        "-Iogr/ogrsf_frmts",
        "-Iogr",
        "-Igcore",
        "-I$(GENDIR)/gcore",
        "-Iport",
        "-I$(GENDIR)/port",
    ],
    defines = ["GDAL_COMPILATION"],
)
