package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
    ]),
)

cc_library(
    name = "ogrsf_frmts",
    hdrs = glob([
        "*.h",
    ]) + [
        "//gcore:headers",
        "//ogr:headers",
        "//port:headers",
    ],
    copts = [
        "-I..",
        "-I../gcore",
        "-I../port",
    ],
    includes = [
        "/usr/local",
    ],
)
