load("//swig:swig.bzl", "gen_swig_python")

gen_swig_python(
    name = "osgeo",
    srcs = [
        "//swig/include/python:gdal_python.i",
    ],
    module_name = "osgeo",
    py_module_name = "osgeo",
    swig_includes = [
        "//swig:swig_includes",
        "//swig/include/python:includes",
    ],
    deps = ["//:gdal_core"],
)
