package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "libgeotiff",
    srcs = glob([
        "*.c",
        "*.cpp",
        "*.inc",
    ]),
    hdrs = [
        ":headers",
        "//gcore:headers",
        "//port:headers",
    ],
    copts = [
        "-Iport",
        "-I$(GENDIR)/port",
        "-Igcore",
        "-I$(GENDIR)/gcore",
        "-Ifrmts/gtiff/libtiff",
    ],
    defines = ["GDAL_COMPILATION"],
    deps = [
        "//frmts/gtiff/libtiff",
        "@proj",
    ],
)
