package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "libtiff",
    srcs = glob([
        "*.c",
        "*.cpp",
    ]),
    hdrs = [
        ":headers",
        "//gcore:headers",
        "//port:headers",
    ],
    copts = [
        "-Iport",
        "-I$(GENDIR)/port",
        "-Igcore",
        "-I$(GENDIR)/gcore",
    ],
    defines = ["GDAL_COMPILATION"],
)
