package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "geojson",
    srcs = glob([
        "*.c",
        "*.cpp",
    ]),
    hdrs = [
        ":headers",
        "//apps:headers",
        "//gcore:headers",
        "//ogr:headers",
        "//ogr/ogrsf_frmts:headers",
        "//ogr/ogrsf_frmts/geojson/libjson:headers",
        "//ogr/ogrsf_frmts/mem:headers",
        "//port:headers",
    ],
    copts = [
        "-Iogr",
        "-Iapps",
        "-I.",
        "-Iogr/ogrsf_frmts",
        "-Iogr/ogrsf_frmts/geojson/libjson",
        "-Iport",
        "-I$(GENDIR)/port",
        "-Igcore",
        "-I$(GENDIR)/gcore",
    ],
    defines = ["GDAL_COMPILATION"],
)
