load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

filegroup(
    name = "kml",
    srcs = glob(
        [
            "*.c",
            "*.cpp",
        ],
        exclude = [
            "kml.cpp",
            "kmlnode.cpp",
            "kmlvector.cpp",
        ],
    ),
)
