package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "mitab",
    srcs = glob([
        "*.c",
        "*.cpp",
    ]),
    hdrs = [
        ":headers",
        "//gcore:headers",
        "//ogr:headers",
        "//ogr/ogrsf_frmts:headers",
        "//port:headers",
    ],
    copts = [
        "-Iport",
        "-I$(GENDIR)/port",
        "-Igcore",
        "-I$(GENDIR)/gcore",
        "-Iogr",
        "-Iogr/ogrsf_frmts",
    ],
    defines = ["GDAL_COMPILATION"],
)
