package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
        "dbfopen.c",
        "shptree.c",
        "shpopen.c",
        "sbnsearch.c",
    ]),
)

filegroup(
    name = "shape",
    srcs = glob(
        [
            "*.c",
            "*.cpp",
        ],
        exclude = [
            "dbfopen.c",
            "shptree.c",
            "shpopen.c",
            "sbnsearch.c",
        ],
    ),
)
