load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

filegroup(
    name = "vrt",
    srcs = glob(
        [
            "*.c",
            "*.cpp",
        ],
    ),
)
