package(default_visibility = ["//:__subpackages__"])

exports_files(
    glob(
        ["*.i"],
        allow_empty = False,
    ),
)

filegroup(
    name = "includes",
    srcs = glob(
        ["docs/*i"],
        allow_empty = False,
    ) + [
        "callback.i",
        "python_exceptions.i",
        "python_strings.i",
        "typemaps_python.i",
    ],
)
