load("//swig:swig.bzl", "gen_swig_python")

_modules = [
    "gdal",
    "gdalconst",
    "ogr",
    # "gdal_array",
    "gnm",
    "osr",
]

[
    gen_swig_python(
        name = modname,
        srcs = [
            "//swig/include:{}.i".format(modname),
        ],
        cdeps = ["//:gdal_core"],
        module_name = modname,
        py_module_name = modname,
        swig_includes = [
            "//swig/include",
            "//swig/include/python:includes",
        ],
    )
    for modname in _modules
]

py_library(
    name = "osgeo",
    srcs = [
        "__init__.py",
    ] + _modules,
)

cc_library(
    name = "osgeo_cpp",
    srcs = _modules,
    deps = [
        "//:gdal_core",
        # See https://github.com/bazelbuild/rules_python/issues/824
        "@rules_python//python/cc:current_py_cc_headers",
    ],
)
