load("//swig:swig.bzl", "swig_python_bindings")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//:__subpackages__"])

_modules = [
    "gdal",
    "gdalconst",
    "ogr",
    "gdal_array",
    "gnm",
    "osr",
]

swig_python_bindings(
    module_names = _modules,
)

py_library(
    name = "osgeo",
    srcs = [
        "__init__.py",
    ] + _modules,
    data = [
        "_{}".format(modname)
        for modname in _modules
    ] + ["//:gdal_core"],
)
