package(default_visibility = ["//:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "*.hpp",
    ]),
)

cc_library(
    name = "libjson",
    srcs = glob([
        "*.c",
        "*.cpp",
    ]),
    hdrs = [
        ":headers",
        "//ogr/ogrsf_frmts:headers",
        "//ogr/ogrsf_frmts/mem:headers",
        "//port",
    ],
    copts = [
        "-Iogr/ogrsf_frmts",
        "-Iport",
        "-I$(GENDIR)/port",
    ],
    deps = ["//port"],
)
