load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//:__subpackages__"])

py_library(
    name = "auxiliary",
    srcs = glob(
        ["*.py"],
        allow_empty = False,
    ),
    deps = [
        "//swig/python/osgeo",
        "@gdal_python_deps//numpy",
    ],
)
